# cardano-plutus-v2-test

./: .gitignore  README.md  cabal.project  cardano-plutus-v2-test.cabal
test/: Spec.hs
test/Spec/: DepositTrace.hs
