Cabal-Version:       3.0
Name:                cardano-plutus-v2-test
Version:             0.1.0.0
Author:              Brian Jing
Maintainer:          @bjing
Build-Type:          Simple
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite cardano-plutus-v2-test-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  other-modules:        Spec.DepositTrace
  build-depends:        base
                      , aeson
                      , cardano-plutus-v2-test
                      , bytestring
                      , containers
                      , data-default
                      , freer-extras
                      , lens
                      , process
                      , playground-common
                      , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-ledger-constraints
                      , plutus-pab
                      , plutus-tx-plugin
                      , plutus-tx
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
  default-language:     Haskell2010
